--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Alex Selivanov - CV</title>
     <link rel="stylesheet" href="style.css">
 
     <!--Google Fonts-->
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
+    <div class="container">
         <header>
             <a href="index.html"><img src="Art/bg1.jpg" class="logo" alt="logo"></a>
             <ul>
@@ -65,6 +65,6 @@
         <footer>
             <h1>Footer</h1>
         </footer>
-    </main>
+    </div>
 </body>
 </html>
